--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -34,5 +34,22 @@ jobs:
       - name: Zip publish output
         run: |
           cd publish
-          zip -r ../functionapp.zip *
+          zip -r ../functionapp.zip .
           cd ..
+
+      - name: Azure login (Service Principal)
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy ZIP to Function App
+        run: |
+          az functionapp deployment source config-zip \
+            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+            --name ${{ secrets.FUNCTION_APP_NAME }} \
+            --src functionapp.zip
+
+      - name: Show Function URL
+        run: |
+          echo "Function default host:"
+          az functionapp show --name ${{ secrets.FUNCTION_APP_NAME }} --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --query defaultHostName -o tsv
