--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -33,21 +33,30 @@ jobs:
 
       - name: Zip publish output
         run: |
-          cd publish
-          zip -r ../functionapp.zip .
-          cd ..
+          # Create zip at repository root so the az CLI can reliably find it
+          zip -r functionapp.zip publish/*
+
+      - name: Verify package
+        run: |
+          echo "Working directory: $(pwd)"
+          ls -la functionapp.zip
+          file functionapp.zip || true
 
       - name: Azure login (Service Principal)
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy ZIP to Function App
+      - name: Deploy ZIP to Function App (debug)
         run: |
+          set -o pipefail
           az functionapp deployment source config-zip \
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
             --name ${{ secrets.FUNCTION_APP_NAME }} \
-            --src functionapp.zip
+            --src "$GITHUB_WORKSPACE/functionapp.zip" \
+            --debug 2>&1 | tee deployment-debug.log || true
+          echo "---- deployment-debug.log ----"
+          sed -n '1,400p' deployment-debug.log
 
       - name: Show Function URL
         run: |
