--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -31,29 +31,51 @@ jobs:
       - name: Ensure zip is available
         run: sudo apt-get update && sudo apt-get install -y zip
 
+      - name: Debug workspace before zipping
+        run: |
+          echo "GITHUB_WORKSPACE=$GITHUB_WORKSPACE"
+          echo "PWD=$(pwd)"
+          ls -la || true
+          if [ -d publish ]; then ls -la publish || true; else echo "publish missing"; fi
+
       - name: Zip publish output
         run: |
-          # Create zip at repository root so the az CLI can reliably find it
-          zip -r functionapp.zip publish/*
+          if [ -d publish ] && [ "$(ls -A publish 2>/dev/null)" ]; then
+            zip -rv functionapp.zip publish/*
+          else
+            echo "ERROR: publish directory missing or empty" >&2
+            ls -la publish || true
+            exit 1
+          fi
 
       - name: Verify package
         run: |
           echo "Working directory: $(pwd)"
-          ls -la functionapp.zip
+          ls -la functionapp.zip || true
           file functionapp.zip || true
+
+      - name: Upload zip artifact (for inspection)
+        uses: actions/upload-artifact@v4
+        with:
+          name: functionapp-zip
+          path: functionapp.zip
 
       - name: Azure login (Service Principal)
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy ZIP to Function App (debug)
+      - name: Show file & deploy (debug)
+        working-directory: ${{ github.workspace }}
         run: |
+          echo "PWD: $(pwd)"
+          ls -la functionapp.zip || true
+          # use relative path (must exist in working dir)
           set -o pipefail
           az functionapp deployment source config-zip \
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
             --name ${{ secrets.FUNCTION_APP_NAME }} \
-            --src "$GITHUB_WORKSPACE/functionapp.zip" \
+            --src ./functionapp.zip \
             --debug 2>&1 | tee deployment-debug.log || true
           echo "---- deployment-debug.log ----"
           sed -n '1,400p' deployment-debug.log
